# bindings

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  vix.json
cmake/: KordexBindingsConfig.cmake.in  KordexBindingsOptions.cmake
docs/: README.md
examples/: CMakeLists.txt  bridge_runtime.cpp  create_engine.cpp  expose_function.cpp  expose_module.cpp  quickjs_eval.cpp  run_script.cpp
include/kordex/bindings/: BindingConfig.hpp  BindingOptions.hpp  BindingResult.hpp  Bindings.hpp  Engine.hpp  EngineContext.hpp  Error.hpp  Function.hpp  Module.hpp  ModuleLoader.hpp  ModuleRegistry.hpp  NativeFunction.hpp  NativeModule.hpp  Object.hpp  Result.hpp  RuntimeBridge.hpp  Script.hpp  ScriptResult.hpp  TypeScriptLoader.hpp  Value.hpp  ValueType.hpp  Version.hpp
include/kordex/bindings/backend/: EngineBackendDriver.hpp  NativeBackendDriver.hpp  QuickJsBackendDriver.hpp
src/: BindingConfig.cpp  BindingOptions.cpp  BindingResult.cpp  Bindings.cpp  Engine.cpp  EngineContext.cpp  Error.cpp  Function.cpp  Module.cpp  ModuleLoader.cpp  ModuleRegistry.cpp  NativeFunction.cpp  NativeModule.cpp  Object.cpp  RuntimeBridge.cpp  Script.cpp  ScriptResult.cpp  Value.cpp  Version.cpp
src/backend/: QuickJsBackendDriver.cpp  TypeScriptLoader.cpp
tests/: CMakeLists.txt  test_binding_config.cpp  test_binding_options.cpp  test_binding_result.cpp  test_engine.cpp  test_engine_context.cpp  test_error.cpp  test_function.cpp  test_module.cpp  test_module_registry.cpp  test_native_function.cpp  test_native_module.cpp  test_object.cpp  test_quickjs_backend.cpp  test_quickjs_errors.cpp  test_quickjs_values.cpp  test_runtime_bridge.cpp  test_script.cpp  test_script_result.cpp  test_value.cpp  test_version.cpp
